try skip cache https://github.com/golangci/golangci-lint-action/issues/863

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -57,12 +57,14 @@ jobs:
           version: v1.56
           working-directory: ${{ matrix.directory }}
           only-new-issues: true
+          skip-cache: true
       - name: golangci-lint on push
         if: github.event_name == 'push' || github.event_name == 'merge_group'
         uses: golangci/golangci-lint-action@3cfe3a4abbb849e10058ce4af15d205b6da42804
         with:
           version: v1.56
           working-directory: ${{ matrix.directory }}
+          skip-cache: true
       - name: Install softHSM
         if: matrix.directory == '.'
         run: |-
