--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -56,7 +56,7 @@ jobs:
           version: v1.56
           working-directory: ${{ matrix.directory }}
           skip-cache: true
-          only-new-issues: ${{ github.event_name == 'pull_request' && 'true' || 'false'}}
+          only-new-issues: ${{ github.event_name == 'pull_request' }}
       - name: Install softHSM
         if: matrix.directory == '.'
         run: |-
