--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -52,7 +52,7 @@ jobs:
       - run: go mod verify
       - name: golangci-lint
         #uses: golangci/golangci-lint-action@3cfe3a4abbb849e10058ce4af15d205b6da42804
-        uses: strantalis/golangci-lint-action@merge-group-support
+        uses: strantalis/golangci-lint-action@f4e979f5b36068d69d340547f66c991dca8b70ef
         with:
           version: v1.56
           working-directory: ${{ matrix.directory }}
