--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          make toolcheck
           make proto-generate
           git config user.name github-actions
           git config user.email github-actions@github.com
