--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -21,15 +21,14 @@ jobs:
         with:
           go-version: '1.21.8'
       - run: |
-          # bring in dependencies
+          echo "Installing dependencies and regenerating code & docs from .proto definitions"
           echo "Installing buf..."
           GO111MODULE=on go install github.com/bufbuild/buf/cmd/buf@v1.30.0 
           echo "Installing golangci-lint..."
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55
           echo "Installing protoc-gen-doc..."
           go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc@v1.5.1
-          echo "Dependencies installed. Checking for tools..."
-          make toolcheck
+          echo "Dependencies installed. Running code & docs generation..."
           make proto-generate
           git config user.name github-actions
           git config user.email github-actions@github.com
