--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -15,6 +15,8 @@ jobs:
       checks: write
       contents: read
       pull-requests: read
+    env:
+      BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
@@ -35,5 +37,5 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "CI: Regenerate code & docs from .proto definitions."
-          git push
+          git push origin $BRANCH_NAME
           echo "Wrapping up 'generate' job."
