denote the TODO to use groups instead of individuals in .gitattributes CODEOWNERship

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,5 +4,6 @@
 
 # Suppresses generated files in diffs
 
+# TODO: change these to known groups instead of individuals
+
 .gitattributes @biscoe916 @jrschumacher @strantalis @ttschampel
-.github/workflows/generate.yaml @biscoe916 @jrschumacher @strantalis @ttschampel
