--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -88,6 +88,16 @@ jobs:
       - run: go mod download
       - run: go mod verify
       - run: go test ./integration -race
+      - name: Install softHSM
+        run: |-
+          sudo apt-get install -y softhsm opensc openssl
+          sudo chmod +x /etc/softhsm
+          sudo chmod +r /etc/softhsm/softhsm2.conf
+          mkdir -p $(pwd)/.tmp/tokens
+          echo "directories.tokendir = $(pwd)/.tmp/tokens" > softhsm2.conf
+          echo "log.level = DEBUG" >> softhsm2.conf
+          echo "SOFTHSM2_CONF=$(pwd)/softhsm2.conf" >> "$GITHUB_ENV"
+      - run: .github/scripts/hsm-init-temporary-keys.sh
       - run: docker compose up -d --wait --wait-timeout 240
       - run: cp example-opentdf.yaml opentdf.yaml
       - uses: JarvusInnovations/background-action@313d37130873d82c33fc907b9b78e932aec8e990
@@ -102,6 +112,7 @@ jobs:
       - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 grpc.health.v1.Health.Check
+      - run: curl --show-error --fail --insecure localhost:8080/kas/v2/kas_public_key
 
   image:
     name: image build
@@ -188,6 +199,7 @@ jobs:
         with:
           go-version: "1.21.8"
           cache: false
+      - run: make go.work
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
         id: deps-changed
         with:
@@ -202,22 +214,22 @@ jobs:
         run: go install github.com/google/go-licenses@5348b744d0983d85713295ea08a20cca1654a45e
       - name: check platform licenses
         if: steps.deps-changed.outputs.platform == 'true'
-        run: >-
+        run: >
           go-licenses check --disallowed_types=forbidden --include_tests  
-              --ignore github.com/opentdf/platform/sdk
-              --ignore github.com/opentdf/platform/protocol
-              .
+          --ignore github.com/opentdf/platform/sdk
+          --ignore github.com/opentdf/platform/protocol
+          .
       - name: check sdk licenses
         if: steps.deps-changed.outputs.sdk == 'true'
-        run: >-
-          go-licenses check --disallowed_types=forbidden --include_tests  
-              --ignore github.com/opentdf/platform/sdk
-              --ignore github.com/opentdf/platform/protocol
-              ./sdk
+        run: >
+          go-licenses check --disallowed_types=forbidden --include_tests
+          --ignore github.com/opentdf/platform/sdk  
+          --ignore github.com/opentdf/platform/protocol
+          ./sdk
       - name: check examples licenses
         if: steps.deps-changed.outputs.examples == 'true'
-        run: >-
+        run: >
           go-licenses check --disallowed_types=forbidden --include_tests  
-              --ignore github.com/opentdf/platform/sdk
-              --ignore github.com/opentdf/platform/protocol
-              ./examples
+          --ignore github.com/opentdf/platform/sdk
+          --ignore github.com/opentdf/platform/protocol
+          ./examples
