--- a/internal/fixtures/policy_fixtures.yaml
+++ b/internal/fixtures/policy_fixtures.yaml
@@ -187,9 +187,9 @@ attribute_value_key_access_servers:
   - value_id: 74babca6-016f-4f3e-a99b-4e46ea8d0fd8
     key_access_server_id: e36640a6-61c5-4d4c-a45b-0e0a26d1c45f
 
-value_members:
+attribute_value_members:
   metadata:
-    table_name: value_members
+    table_name: attribute_value_members
     columns:
       - id
       - value_id
