--- a/.github/workflows/lint-all.yaml
+++ b/.github/workflows/lint-all.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           version: v1.55
           working-directory: ${{ matrix.directory }}
+          args: --out-format=colored-line-number
 
   buf:
     runs-on: ubuntu-22.04
