--- a/example-opentdf.yaml
+++ b/example-opentdf.yaml
@@ -41,7 +41,7 @@ services:
               - "msExchMailboxSecurityDescriptor"
 server:
   auth:
-    enabled: false
+    enabled: true
     audience: "http://localhost:8080"
     issuer: http://localhost:8888/auth/realms/opentdf
     clients:
