--- a/example-opentdf.yaml
+++ b/example-opentdf.yaml
@@ -53,6 +53,7 @@ server:
     issuer: http://localhost:8888/auth/realms/opentdf
     clients:
       - "opentdf"
+      - "opentdf-sdk"
     policy:
       ## Default policy for all requests
       default: #"role:readonly"
