--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -35,13 +35,14 @@ server:
       ## can use the builtin policy if desired
       roles:
         ## Dot notation is used to access nested claims (i.e. realm_access.roles)
-        claim: # realm_access.roles
+        claim: client_id
         ## Maps the external role to the opentdf role
         ## Note: left side is used in the policy, right side is the external role
         map:
         #  readonly: opentdf-readonly
         #  admin: opentdf-admin
         #  org-admin: opentdf-org-admin
+
       ## Custom policy (see examples https://github.com/casbin/casbin/tree/master/examples)
       csv: #|
       #  p, role:org-admin, policy:attributes, *, *, allow
