--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -45,7 +45,7 @@ jobs:
           go-version: "1.21.8"
           cache-dependency-path: |
             examples/go.sum
-            protocol/go/go.sum
+            protocol/go.sum
             sdk/go.sum
             service/go.sum
       - run: make go.work
@@ -84,7 +84,7 @@ jobs:
           cache-dependency-path: |
             service/go.sum
             examples/go.sum
-            protocol/go/go.sum
+            protocol/go.sum
             sdk/go.sum
       - run: make go.work
       - run: go mod download
@@ -154,14 +154,14 @@ jobs:
           go-version: "1.21.8"
           cache-dependency-path: |
             service/go.sum
-            protocol/go/go.sum
+            protocol/go.sum
             sdk/go.sum
             examples/go.sum
       - run: cd service && go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: cd service && go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: make proto-generate
       - name: Restore go.mod after installing protoc-gen-doc
-        run: git restore {service,protocol/go}/go.{mod,sum}
+        run: git restore {service,protocol}/go.{mod,sum}
       - run: git diff
       - run: git diff-files --ignore-submodules
       - name: Check that files have been formatted before PR submission
