--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,23 +2,23 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/opentdf/platform/protocol/go
+    default: github.com/opentdf/platform/protocol
     except:
       - buf.build/bufbuild/protovalidate
       - buf.build/googleapis/googleapis
       - buf.build/grpc-ecosystem/grpc-gateway
 plugins:
   - plugin: buf.build/grpc-ecosystem/gateway:v2.19.1
-    out: protocol/go
+    out: protocol
     opt:
       - paths=source_relative
   # dependencies
   - plugin: buf.build/protocolbuffers/go:v1.33.0
-    out: protocol/go
+    out: protocol
     opt:
       - paths=source_relative
   - plugin: buf.build/grpc/go:v1.3.0
-    out: protocol/go
+    out: protocol
     opt:
       - paths=source_relative
 
