--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -36,7 +36,7 @@ jobs:
         directory:
           - "."
           - sdk
-          - lib/crypto
+          - lib/ocrypto
           - examples
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
