--- a/service/internal/fixtures/policy_fixtures.yaml
+++ b/service/internal/fixtures/policy_fixtures.yaml
@@ -265,6 +265,14 @@ subject_mappings:
       actions:
         - standard: STANDARD_ACTION_DECRYPT
 
+    subject_mapping_with_complex_selector_value_scs:
+      id: 5bf3b34c-72a2-447f-8b7d-46413329bc1f
+      attribute_value_id: 81f643f8-e050-4b97-a005-b61294d4c8bb
+      # subject_condition_set_complex_selector_value
+      subject_condition_set_id: 4ed65609-9d98-4ce3-b073-eeec5be8db50
+      actions:
+        - standard: STANDARD_ACTION_TRANSMIT
+
 subject_condition_set:
   metadata:
     table_name: subject_condition_set
@@ -313,10 +321,12 @@ subject_condition_set:
           - condition_groups:
               - boolean_operator: CONDITION_BOOLEAN_TYPE_ENUM_OR
                 conditions:
-                  - subject_external_selector_value: '.data[0].favorite_things | map(tostring) | any(index("futbol"))'
+                  # escaped string in complex expression
+                  - subject_external_selector_value: '.data[0].favorite_things | map(tostring) | any(index(\"futbol\"))'
                     operator: SUBJECT_MAPPING_OPERATOR_ENUM_IN
                     subject_external_values:
                       - true
+                  # unescaped string in complex expression
                   - subject_external_selector_value: '.data[0].favorite_things | map(tostring) | any(index("soccer"))'
                     operator: SUBJECT_MAPPING_OPERATOR_ENUM_IN
                     subject_external_values:
@@ -376,6 +386,23 @@ subject_condition_set:
                     operator: SUBJECT_MAPPING_OPERATOR_ENUM_IN
                     subject_external_values:
                       - marketing
+    subject_condition_set_complex_selector_value:
+      id: 4ed65609-9d98-4ce3-b073-eeec5be8db50
+      condition:
+        subject_sets:
+          - condition_groups:
+              - boolean_operator: CONDITION_BOOLEAN_TYPE_ENUM_OR
+                conditions:
+                  # escaped string in complex expression
+                  - subject_external_selector_value: '.result[0].random | map(tostring) | any(index(\"something\"))'
+                    operator: SUBJECT_MAPPING_OPERATOR_ENUM_IN
+                    subject_external_values:
+                      - false
+                  # unescaped string in complex expression
+                  - subject_external_selector_value: '.result[1].decided | map(tostring) | any(index("something_else"))'
+                    operator: SUBJECT_MAPPING_OPERATOR_ENUM_IN
+                    subject_external_values:
+                      - true
 
 ##
 # Resource Mappings
