--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -71,7 +71,7 @@ jobs:
           echo "log.level = DEBUG" >> softhsm2.conf
           echo "SOFTHSM2_CONF=$(pwd)/softhsm2.conf" >> "$GITHUB_ENV"
       - if: matrix.directory == 'service'
-        run: .github/scripts/hsm-init-temporary-keys.sh
+        run: .github/scripts/init-temp-keys.sh --hsm
       - run: go test ./... -short
         working-directory: ${{ matrix.directory }}
       - if: matrix.directory == 'service'
