--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -12,6 +12,7 @@ services:
   kas:
     enabled: true
     issuer: http://localhost:8888/auth/realms/opentdf
+    discovery: http://localhost:8888/auth/realms/opentdf
   policy:
     enabled: true
   authorization:
