add if condition to only target opentdf/platform repo

--- a/.github/workflows/nightly-build.yaml
+++ b/.github/workflows/nightly-build.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   nightly:
+    if: (github.event_name == 'schedule' && github.repository == 'opentdf/platform')
     name: Nightly Container Build
     runs-on: ubuntu-22.04
     permissions:
