feat!(core): Single module
Replaces go.work and all go.mod files with a single go.mod in the root

--- a/release-please.json
+++ b/release-please.json
@@ -4,23 +4,10 @@
   "bump-minor-pre-major": true,
   "bump-patch-for-minor-pre-major": true,
   "separate-pull-requests": true,
-  "include-component-in-tag": true,
-  "tag-separator": "/",
+  "include-component-in-tag": false,
   "packages": {
-    "lib/fixtures": {
-      "component": "lib/fixtures"
-    },
-    "lib/ocrypto": {
-      "component": "lib/ocrypto"
-    },
-    "protocol/go": {
-      "component": "protocol/go"
-    },
-    "sdk": {
-      "component": "sdk"
-    },
-    "service": {
-      "component": "service"
+    ".": {
+      "component": "."
     }
   }
 }
