--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -64,12 +64,9 @@ jobs:
       pull-requests: read
     strategy:
       matrix:
-        directory:
-          - examples
-          - sdk
-          - service
-          - lib/ocrypto
-          - lib/fixtures
+        crypto:
+          - hsm
+          - standard
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
         with:
@@ -78,29 +75,15 @@ jobs:
         with:
           go-version: "1.22.3"
           check-latest: false
-          cache-dependency-path: |
-            examples/go.sum
-            protocol/go/go.sum
-            sdk/go.sum
-            service/go.sum
-      - if: env.IS_RELEASE_BRANCH == 'true'
-        run: ./.github/scripts/work-init.sh
       - run: go mod download
-        working-directory: ${{ matrix.directory }}
       - run: go mod verify
-        working-directory: ${{ matrix.directory }}
-      - run: go work use .
-        if: env.IS_RELEASE_BRANCH == 'true'
-        working-directory: ${{ matrix.directory }}
       - name: golangci-lint
         uses: golangci/golangci-lint-action@9d1e0624a798bb64f6c3cea93db47765312263dc
         with:
           version: v1.58
-          working-directory: ${{ matrix.directory }}
           skip-cache: true
           args: --out-format=colored-line-number
-      - name: Install softHSM
-        if: matrix.directory == 'service'
+      - if: matrix.crypto == 'hsm'
         run: |-
           sudo apt-get install -y softhsm opensc openssl
           sudo chmod +x /etc/softhsm
@@ -109,18 +92,16 @@ jobs:
           echo "directories.tokendir = $(pwd)/.tmp/tokens" > softhsm2.conf
           echo "log.level = DEBUG" >> softhsm2.conf
           echo "SOFTHSM2_CONF=$(pwd)/softhsm2.conf" >> "$GITHUB_ENV"
-      - if: matrix.directory == 'service'
+      - if: matrix.crypto == 'hsm'
         run: .github/scripts/init-temp-keys.sh --hsm
+      - if: matrix.crypto == 'standard'
+        run: .github/scripts/init-temp-keys.sh
       - run: go test ./... -short
-        working-directory: ${{ matrix.directory }}
-      - if: matrix.directory == 'service'
-        run: go test ./service/integration -race -failfast
+      - run: go test ./service/integration -race -failfast
       - name: check go fmt and go mod tidy
         run: |-
           go mod tidy
           go fmt ./...
-          git restore go.sum "${GITHUB_WORKSPACE}/go.work.sum"
-        working-directory: ${{ matrix.directory }}
       - run: git diff
       - run: git diff-files --ignore-submodules
       - name: Check that files have been formatted before PR submission; see above for error details
@@ -140,13 +121,6 @@ jobs:
         with:
           go-version: "1.22.3"
           check-latest: false
-          cache-dependency-path: |
-            service/go.sum
-            examples/go.sum
-            protocol/go/go.sum
-            sdk/go.sum
-      - if: env.IS_RELEASE_BRANCH == 'true'
-        run: ./.github/scripts/work-init.sh
       - run: go mod download
       - run: go mod verify
       - name: Install softHSM
@@ -227,21 +201,14 @@ jobs:
         with:
           go-version: "1.22.3"
           check-latest: false
-          cache-dependency-path: |
-            service/go.sum
-            protocol/go/go.sum
-            sdk/go.sum
-            examples/go.sum
-      - run: cd service && go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
-      - run: cd service && go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
+      - run: go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
+      - run: go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: make proto-generate
       - name: Restore go.mod after installing protoc-gen-doc
-        run: git restore {service,protocol/go}/go.{mod,sum}
+        run: git restore go.{mod,sum}
       - name: validate go mod tidy
         run: |-
-          cd protocol/go
           go mod tidy
-          git restore go.sum "${GITHUB_WORKSPACE}/go.work.sum"
       - run: git diff
       - run: git diff-files --ignore-submodules
       - name: Check that make proto-generate has run before PR submission; see above for error details
@@ -274,14 +241,4 @@ jobs:
       - name: install go-licenses
         run: go install github.com/google/go-licenses@5348b744d0983d85713295ea08a20cca1654a45e
       - name: check service licenses
-        run: >
-          go-licenses check --disallowed_types=forbidden --include_tests
-          ./service
-      - name: check sdk licenses
-        run: >
-          go-licenses check --disallowed_types=forbidden --include_tests
-          ./sdk
-      - name: check examples licenses
-        run: >
-          go-licenses check --disallowed_types=forbidden --include_tests
-          ./examples
+        run: go-licenses check --disallowed_types=forbidden --include_tests ./...
