--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -25,14 +25,9 @@ jobs:
         with:
           go-version: '1.22.3'
           check-latest: false
-          cache-dependency-path: |
-            service/go.sum
-            sdk/go.sum
-            examples/go.sum
-            protocol/go/go.sum
 
       - name: 'Generate Golang Test Reports'
-        run: go test -v -coverprofile coverage.out -json ./sdk/... ./service/... ./lib/ocrypto | tee coverage.json
+        run: go test -v -coverprofile coverage.out -json ./... | tee coverage.json
 
       - name: 'Cover report'
         run: go tool cover -func=coverage.out
