--- a/release-please.json
+++ b/release-please.json
@@ -5,22 +5,26 @@
   "separate-pull-requests": true,
   "include-component-in-tag": true,
   "tag-separator": "/",
-  "group-pull-request-title-pattern": "chore(release): Tag ${component}/${version}",
   "packages": {
     "lib/fixtures": {
-      "component": "lib/fixtures"
+      "component": "lib/fixtures",
+      "release-as": "0.1.0"
     },
     "lib/ocrypto": {
-      "component": "lib/ocrypto"
+      "component": "lib/ocrypto",
+      "release-as": "0.1.0"
     },
     "protocol/go": {
-      "component": "protocol/go"
+      "component": "protocol/go",
+      "release-as": "0.1.0"
     },
     "sdk": {
-      "component": "sdk"
+      "component": "sdk",
+      "release-as": "0.1.0"
     },
     "service": {
-      "component": "service"
+      "component": "service",
+      "release-as": "0.1.0"
     }
   }
 }
