--- a/opentdf-example-no-kas.yaml
+++ b/opentdf-example-no-kas.yaml
@@ -15,6 +15,7 @@ services:
     enabled: true
 server:
   auth:
+    enabled: true
     audience: "http://localhost:8080"
     issuer: http://localhost:8888/auth/realms/tdf
   grpc:
