--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -22,6 +22,7 @@ services:
     legacy: true
 server:
   auth:
+    enabled: true
     audience: "http://localhost:8080"
     issuer: http://localhost:8888/auth/realms/opentdf
     clients:
