chore(auth): DPoP and public fixes
- expose legacy public key endpoint as public
- DPoP `htu` should include origin part of url
- clarify error messages for dpop

--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -23,6 +23,8 @@ services:
 server:
   auth:
     enabled: true
+    allowedHosts:
+      - "http://localhost:8080"
     audience: "http://localhost:8080"
     issuer: http://localhost:8888/auth/realms/opentdf
     policy:
