--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,11 +28,13 @@ jobs:
       - name: 'Setup Go'
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: '1.21.8'
+          go-version: '1.22.2'
+          check-latest: false
           cache-dependency-path: |
-            ./service/go.sum
-            ./sdk/go.sum
-          cache: true
+            service/go.sum
+            sdk/go.sum
+            examples/go.sum
+            protocol/go/go.sum
 
       - name: 'Generate Golang Test Reports'
         run: go test ./sdk/... ./service/... ./lib/ocrypto -v -coverprofile coverage.out -json ./... | tee coverage.json
