Check coverage files

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -42,6 +42,11 @@ jobs:
       - name: 'Cover report'
         run: go tool cover -func=coverage.out
 
+      - name: 'Check coverage files'
+        run: |
+          pwd
+          ls -la
+          find . -name coverage.out
       - name: 'Archive Golang Test Results'
         uses: actions/upload-artifact@v3
         with:
