--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -72,6 +72,12 @@ jobs:
         with:
           name: code-coverage-report
 
+      - name: 'Check coverage files'
+        run: |
+          pwd
+          ls -la
+          find . -name coverage.out
+
       - name: 'SonarCloud Scan'
         uses: SonarSource/sonarcloud-github-action@master
         env:
