--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -37,7 +37,7 @@ jobs:
             protocol/go/go.sum
 
       - name: 'Generate Golang Test Reports'
-        run: go test ./sdk/... ./service/... ./lib/ocrypto -v -coverprofile coverage.out -json | tee coverage.json
+        run: go test -v -coverprofile coverage.out -json ./sdk/... ./service/... ./lib/ocrypto | tee coverage.json
 
       - name: 'Cover report'
         run: go tool cover -func=coverage.out
