--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.exclusions=docs/**,protocol/**,.github/**,examples/**,**/*_test.go
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go 
 
-sonar.go.coverage.reportPaths=./coverage.out
+sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=coverage.json
