--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,5 @@ sonar.test.inclusions=**/*_test.go
 
 sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=coverage.json
+
+sonar.log.level = DEBUG
