--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,4 +10,7 @@ sonar.test.inclusions=**/*_test.go
 sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=coverage.json
 
-sonar.log.level = DEBUG
+# need to properly process coverage report file presented in the .gitignore
+sonar.scm.exclusions.disabled=true
+
+sonar.log.level = INFO
