Add scm property

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,6 +11,6 @@ sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=coverage.json
 
 # need to properly process coverage report file presented in the .gitignore
-sonar.scm.exclusions.disabled=true
+sonar.scm.disabled=true
 
 sonar.log.level = INFO
