--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,8 +1,7 @@
 name: SonarCloud
 on:
-  push:
-    branches:
-      - feat/sonarcloud-analysis
+  schedule:
+    - cron: "0 5 * * 2,4,6"
 #  pull_request:
 #    types:
 #      - opened
@@ -43,7 +42,7 @@ jobs:
         with:
           name: code-coverage-report
           path: coverage.*
-          retention-days: 1
+          retention-days: 3
 
   sonarcloud:
     name: 'SonarCloud'
