--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -50,7 +50,7 @@ jobs:
     name: 'SonarCloud'
     runs-on: ubuntu-latest
     needs: [gotest]
-    if: github.event.pull_request.head.repo.full_name == github.repository
+#    if: github.event.pull_request.head.repo.full_name == github.repository
     permissions:
       contents: read
 
