--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -13,6 +13,13 @@ services:
     enabled: true
   policy:
     enabled: true
+  entityresolution:
+    enabled: true
+    url: http://localhost:8888
+    clientid: "tdf-entity-resolution"
+    clientsecret: "secret"
+    realm: "opentdf"
+    legacykeycloak: true
   authorization:
     enabled: true
     url: http://localhost:8888
