--- a/opentdf-example.yaml
+++ b/opentdf-example.yaml
@@ -15,7 +15,7 @@ services:
     enabled: true
   entityresolution:
     enabled: true
-    url: http://localhost:8888
+    url: http://localhost:8888/auth
     clientid: "tdf-entity-resolution"
     clientsecret: "secret"
     realm: "opentdf"
