--- a/opentdf-with-hsm.yaml
+++ b/opentdf-with-hsm.yaml
@@ -13,13 +13,16 @@ services:
     enabled: true
   policy:
     enabled: true
+  entityresolution:
+    enabled: true
+    url: http://localhost:8888/auth
+    clientid: "tdf-entity-resolution"
+    clientsecret: "secret"
+    realm: "opentdf"
+    legacykeycloak: true
   authorization:
     enabled: true
-    url: http://localhost:8888
-    client: "tdf-entity-resolution"
-    secret: "secret"
-    realm: "opentdf"
-    legacy: true
+    ersUrl: http://localhost:8080/entityresolution/resolve
 server:
   auth:
     enabled: true
